# muvit

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  abstract.md  pyproject.toml
.github/workflows/: release.yml
muvit/: __init__.py  bblocks.py  data.py  decoders.py  encoders.py  mae.py  trainer.py  utils.py
tests/: test_data.py  test_decoders.py  test_encoders.py  test_mae.py
