[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muvit"
dynamic = ["version"]
description = "Multi-Resolution Vision Transformers for Learning Across Scales in Microscopy"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11,<3.14"
license = { text = "BSD 3-Clause License" }
authors = [
    { name = "Albert Dominguez Mantes", email = "albert.dominguezmantes@epfl.ch" },
    { name = "Martin Weigert", email = "martin.weigert@tu-dresden.de" },
]
urls = { Homepage = "https://github.com/weigertlab/muvit" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "einops",
    "lightning",
    "matplotlib",
    "numpy",
    "Pillow",
    "pyyaml",
    "scikit-image",
    "torch",
    "wandb",
    "x-transformers"
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.flake8]
ignore = ["E116", "E501", "E203"]